--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-audio-recorder-player": "^3.5.3",
+    "react-native-audio-record": "^0.2.2",
     "react-native-permissions": "^3.7.3",
+    "react-native-sound": "^0.11.2",
     "react-native-sound-recorder": "^1.5.0",
     "react-native-voice": "^0.3.0",
     "styled-components": "^5.3.8"
